# rust-script

./: Cargo.toml  LICENSE  Makefile  README.md
src/: main.rs
