[package]
name = "jf-tool"
version = "0.1.0"
edition = "2021"
authors = ["Josef Friedrich <josef@friedrich.rocks>"]
description = "My personal command line tool for various tasks."
readme = "README.md"
categories = ["command-line-utilities"]
license = "MIT"
repository = "https://github.com/Josef-Friedrich/rust-tool"

[[bin]]
name = "tool"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
os_info = "3.8.2"
